--- a/buoi1/index.html
+++ b/buoi1/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to my first website</h1>
+    <h1 style="background-color: orange;color :white; text-align: center;">Welcome to my first website</h1>
     <h2>Xin chào tớ tên là Toàn thật là may mắn khi được tham gia vào lớp Web Public của CLB HIT</h2>
     <img src="https://image.viettimes.vn/w820/Uploaded/2024/ihjoplt/2024_04_02/do-mixi-youtube-2-350-1743.jpg" alt="MIXI" style = "width: 90px;height: 120px;">
     <h3>Đôi chút về tớ nè!!!!</h3>
@@ -27,7 +27,7 @@
         <li>ngủ</li>
         <li>ngủ</li>
     </ol>
-    <h3>crush cua t la : <a href="https://pages.lazada.vn/wow/i/vn/LandingPage/lazmall?spm=a2o4n.home.feature_nav.1.2d3d3bdcdXuHIU&scm=1003.4.icms-zebra-5000379-2586391.OTHER_6502188520_7689681&trafficFrom=17449020_21419788_303586&laz_trackid=2:mm_159551257_52003150_2010953177:clkgjnpii1i35vat1nglg&mkttid=clkgjnpii1i35vat1nglg"> <button> đây nhé </button> </a> </h3>
+    <h3>crush cua t la : <a href="https://pages.lazada.vn/wow/i/vn/LandingPage/lazmall?spm=a2o4n.home.feature_nav.1.2d3d3bdcdXuHIU&scm=1003.4.icms-zebra-5000379-2586391.OTHER_6502188520_7689681&trafficFrom=17449020_21419788_303586&laz_trackid=2:mm_159551257_52003150_2010953177:clkgjnpii1i35vat1nglg&mkttid=clkgjnpii1i35vat1nglg"> <button style="background-color: pink;color :green"> đây nhé </button> </a> </h3>
     <h3>Tớ học cũng rất rất bình thường </h3>
     <table border = "1px" cellspacing = "0px">
         <tr> 
